# HoneyPot_Final

./: .env.example  COMPLETE_SUMMARY.md  PROFESSIONAL_SUMMARY.md  PROJECT_SHOWCASE.md  QUICK_START.md  README.md  ai_threat_intel.py  alert_config.json  api_server.py  dashboard.html  demo.py  generate_report.sh  honeypot_analysis.ipynb  honeypot_intelligence.db  parse_logs.py  pyproject.toml  pytest.ini  quick_demo.sh  realtime_monitor.py  requirements-dev.txt  requirements.txt  run_tests.py  sitecustomize.py  test_honeypot.sh  threat_intelligence.db  threat_model.pkl
log/: cowrie.json
reports/: basic_report.txt
tests/: test_ai_threat_intel.py  test_api_server.py  test_basic_functionality.py  test_realtime_monitor.py
